tests/NormalTests/paczka1/fuzzy1/85537045.err
Error in line 3: t5B4uGsG S78 16,2
Error in line 4: DKD7xzhtu S856 58,1
Error in line 9: FH5PhgC4ol S72 62,34
Error in line 16: FH5PhgC4ol S78 59,7
Error in line 8: DKD7xzhtu A696 67,4
Error in line 6: t5B4uGsG S72 56,9
Error in line 24: t5B4uGsG S856 71,7
Error in line 22: FH5PhgC4ol S856 30,1
Error in line 32: FH5PhgC4ol S856 60,22
Error in line 31: FH5PhgC4ol S78 78,9
